--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth0": "^4.28.0",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.5.1",
+    "express-oauth-server": "^2.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
     "yup": "^1.3.3"
