--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.4.0",
     "@tailwindcss/vite": "^4.1.12",
+    "auth0": "^4.28.0",
+    "axios": "^1.11.0",
+    "express-jwt": "^8.5.1",
+    "express-oauth-server": "^2.0.0",
+    "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
