--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "vercel-build": "npm run build"
   },
   "author": "",
   "license": "ISC",
