--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,4 +2,7 @@ VITE_AUTH0_DOMAIN=your-auth0-domain.auth0.com
 VITE_AUTH0_CLIENT_ID=your-auth0-client-id
 VITE_AUTH0_AUDIENCE=https://your-auth0-domain.auth0.com/api/v2/
 VITE_AUTH0_SCOPE=openid profile email
+# For development
 VITE_API_BASE_URL=http://localhost:8000/api
+# For production (update with your deployed backend URL)
+# VITE_API_BASE_URL=https://your-backend.vercel.app/api
